# html5_rdp

./: .gitignore  CONTRIBUTING.md  README.md  build.sh  index.html  package.json  run_local.sh  tsconfig.json  vite.config.ts
.cursor/rules/: codding-standards.mdc  development-workflow.mdc  project-overview.mdc  ui-ux-guidelines.mdc
agent/: Cargo.toml  build.sh  config.toml  install_service.ps1
agent/src/: agent.rs  capture.rs  config.rs  encoder.rs  error.rs  input.rs  lib.rs  logging.rs  main.rs  service.rs  transport.rs  types.rs  utils.rs
backend/: package.json  tsconfig.json
backend/src/: index.ts
backend/src/core/: RDPSessionManager.ts  index.ts
backend/src/routes/: audit.ts  auth.ts  devices.ts  files.ts  sessions.ts
backend/src/services/: AuditLogger.ts  AuthManager.ts  DeviceRedirectionManager.ts  FileTransferManager.ts
backend/src/utils/: Config.ts  Logger.ts
backend/src/ws/: WebSocketManager.ts
docs/: architecture.md
frontend/: index.html  main.ts  package.json  vite.config.ts
frontend/components/: App.ts
frontend/components/panels/: ConnectionPanel.ts  DeviceRedirectionPanel.ts  FileTransferPanel.ts  SettingsPanel.ts
frontend/components/rdp/: CanvasRenderer.ts  InputHandler.ts  RDPConnectionPanel.ts
frontend/components/ui/: PerformanceOverlay.ts
frontend/pages/: App.ts
frontend/services/rdp/: RDPService.ts
frontend/services/webrtc/: WebRTCService.ts
frontend/services/websocket/: ConnectionManager.ts  WebSocketService.ts
frontend/styles/components/: rdp-connection-panel.css
frontend/utils/: Config.ts
installer/windows/: installer.nsi
protocol/: spec.md
src/: main.ts
src/components/: App.ts  CanvasRenderer.ts  ConnectionPanel.ts  InputHandler.ts  PerformanceOverlay.ts  SettingsPanel.ts
src/services/: ConnectionManager.ts  WebSocketService.ts
src/styles/: main.css
src/utils/: Config.ts
web-client/: dev-server.js  index.html
web-client/src/: main.ts
web-client/src/components/: App.ts  ConnectionPanel.ts  InputHandler.ts  PerformanceOverlay.ts  SettingsPanel.ts
web-client/src/services/: ConnectionManager.ts  WebRTCService.ts
web-client/src/styles/: main.css
web-client/src/utils/: Config.ts  ErrorHandler.ts  EventEmitter.ts  Logger.ts
