[package]
name = "real-remote-desktop-agent"
version = "1.0.0"
edition = "2021"
authors = ["Real Remote Desktop Team"]
description = "Native agent for Real Remote Desktop platform"
license = "MIT"
repository = "https://github.com/real-remote-desktop/agent"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1.0"
thiserror = "1.0"

# Video encoding
openh264 = "0.2"

# WebRTC and networking
webrtc = "0.9"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tungstenite = { version = "0.20", features = ["native-tls"] }
url = "2.4"
http = "0.2"
futures-util = "0.3"

# Configuration and CLI
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
dirs = "5.0"
toml = "0.8"

# Security and crypto
ring = "0.16"
base64 = "0.21"
sha2 = "0.10"

# Windows service
windows-service = "0.6"

# Compression
flate2 = "1.0"
brotli = "3.3"

# Utilities
rand = "0.8"
hex = "0.4"
num_cpus = "1.0"
sysinfo = "0.29"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "real-remote-desktop-agent"
path = "src/main.rs"

[lib]
name = "real_remote_desktop_agent"
path = "src/lib.rs" 